# cpp-boilerplate

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
cmake/: clang-tidy.cmake  coverage.cmake  tests.cmake
docker/: Dockerfile
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/app/tests/: CMakeLists.txt  app.cpp
src/module/: CMakeLists.txt  feature.cpp  feature.h
src/module/mocks/: CMakeLists.txt  feature.cpp  feature.h
src/module/tests/: CMakeLists.txt  feature.cpp
src/utils/: injector.h
tools/: check-format.sh  ci-release.sh  ci-test.sh
